# bevy_rhythm

./: .gitignore  Cargo.toml  README.md
assets/songs/: test.toml
src/: arrows.rs  audio.rs  consts.rs  main.rs  map_maker.rs  menu.rs  score.rs  time.rs  types.rs  ui.rs
src/shaders/: background.frag  background.rs  background.vert  mod.rs  target_arrows.frag  target_arrows.rs  target_arrows.vert
