[package]
name = "bevy_rhythm"
version = "0.1.0"
authors = ["Guim Caballero <guim@caballerocoll.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
toml = "0.5.8"
serde = "1.0.118"
serde_derive = "1.0.118"
